--- a/smppgc/www/templates/v1.html.hbs
+++ b/smppgc/www/templates/v1.html.hbs
@@ -37,10 +37,12 @@
     <div id="typing-place">
       <div id="mesgs">
       </div>
-      <div id="pending-mesgs"></div>
-      <div class="bottom-bar">
-        <input maxlength="100" id="send-input" type="text">
-        <button id="leavebtn" class="button">Leave</button>
+      <div class="bottom">
+        <div id="pending-mesgs"></div>
+        <div class="bottom-bar">
+          <input maxlength="100" id="send-input" type="text">
+          <button id="leavebtn" class="button">Leave</button>
+        </div>
       </div>
     </div>
 
