--- a/smppgc/www/static/v1.css
+++ b/smppgc/www/static/v1.css
@@ -5,7 +5,15 @@ body{
   background: var(--color_base01);
   font-family: "Open Sans", "Helvetica Neue", helvetica, sans-serif
 }
-#login {
+#login{
+  background: #00000040;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+}
+.login-popup {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -19,6 +27,14 @@ body{
 
   display: flex;
   flex-direction: column;
+}
+
+a{
+  color: var(--color_accent);
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: underline;
 }
 
 .logo{
