--- a/smppgc/www/templates/v1.html.hbs
+++ b/smppgc/www/templates/v1.html.hbs
@@ -30,6 +30,7 @@
       };
 
       const WEBSOCKET_URL="{{websocket_url}}";
+      const RES_URL="{{res_url}}";
     </script>
     <script defer type="text/javascript" src="{{res_url}}/static/v1.js"></script>
   </head>
