--- a/smppgc/www/templates/v1.html.hbs
+++ b/smppgc/www/templates/v1.html.hbs
@@ -32,7 +32,7 @@
       {{#if debug}}
       const WEBSOCKET_URL="ws://localhost:8081/socket/v1";
       {{else}}
-      const WEBSOCKET_URL="wss://ldev.eu.org/smpp/gc/socket/v1",
+      const WEBSOCKET_URL="wss://ldev.eu.org/smpp/gc/socket/v1";
       {{/if}}
       const ROOT_URL="{{root_url}}";
     </script>
