--- a/smppgc/www/static/v1.css
+++ b/smppgc/www/static/v1.css
@@ -5,6 +5,16 @@ body{
   background: var(--color_base01);
   font-family: "Open Sans", "Helvetica Neue", helvetica, sans-serif
 }
+
+.warning{
+  font-weight: bold;
+  color: var(--color_accent);
+  margin: 0px 1rem 0px 1rem;
+}
+.text-accent{
+  color: var(--color_accent);
+}
+
 #login{
   background: #00000040;
   position: absolute;
@@ -20,7 +30,7 @@ body{
   transform: translate(-50%, -50%);
   border: 3px solid var(--color_accent);
   border-radius: 15px;
-  width: 500px;
+  width: 600px;
   padding: 8px;
   background-color: var(--color_base01);
   box-shadow: 20px 20px 80px #000000ff;
@@ -38,29 +48,23 @@ a:hover{
 }
 
 .logo{
-  display:grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 1fr;
-  align-items: center;
+  margin: 2rem;
+  display:flex;
+  flex-direction: row;
+  justify-content:center;
 }
+.logo .logo-text{
+  display:flex;
+  flex-direction: column;
+}
+
 .logo img{
-  grid-row: 1/3;
-  grid-column: 1/2;
-  width: 100%;
   object-fit: cover;
 }
 .logo span{
   font-weight: bold;
   margin-left: 1rem;
   font-size: 70px;
-}
-.logo .global{
-  grid-row: 1/2;
-  grid-column: 2/3;
-}
-.logo .chat{
-  grid-row: 2/3;
-  grid-column: 2/3;
 }
 
 .container{
@@ -99,6 +103,12 @@ input {
 .button:hover {
   filter: brightness(120%);
 }
+.button[disabled]:hover{
+  filter:unset;
+}
+.button[disabled]{
+  cursor:unset;
+}
 
 
 #err-info-mesg{
@@ -136,7 +146,7 @@ input {
   margin: 10px;
   display:flex;
   flex-direction: column;
-  overflow:scroll;
+  overflow:auto;
 }
 #pending-mesgs{
   color: var(--color_text);
