--- a/smppgc/www/templates/v1.html.hbs
+++ b/smppgc/www/templates/v1.html.hbs
@@ -10,7 +10,7 @@
     <style type="text/css">
       {{theme_css}}
     </style>
-    <link rel="stylesheet" href="{{root_url}}/static/v1.css" />
+    <link rel="stylesheet" href="{{root_url}}/static/v1.css?ckey={{version}}" />
     <style id="importance_filter"></style>
 
 
@@ -47,7 +47,7 @@
       {{/if}}
       const ROOT_URL="{{root_url}}";
     </script>
-    <script defer type="text/javascript" src="{{root_url}}/static/v1.js"></script>
+    <script defer type="text/javascript" src="{{root_url}}/static/v1.js?ckey={{version}}"></script>
     {{/if}}
   </head>
   <body>
