--- a/smppgc/www/static/v1.css
+++ b/smppgc/www/static/v1.css
@@ -215,4 +215,7 @@ input {
   display:flex;
   flex-direction:column;
 }
-
+#name-input::placeholder{
+  color: var(--color_text);
+  opacity: 0.7;
+}
