--- a/smppgc/www/templates/v1.html.hbs
+++ b/smppgc/www/templates/v1.html.hbs
@@ -21,9 +21,9 @@
     {{#if offline}}
     {{else}}
     <script type="text/javascript">
-      //from: https://github.com/doomjs/dataview-getstring
+      //modified from: https://github.com/doomjs/dataview-getstring
       DataView.prototype.getString = function(offset, length){
-        var len = typeof length == 'number' ? length : this.byteLength;
+        var len = typeof length == 'number' ? length : this.byteLength-offset;
         let decoder = new TextDecoder();
         let dv = new DataView(this.buffer, offset, len);
         return decoder.decode(dv);
